@@ -104,6 +104,32 @@
                     <version>11.1.2</version>
                 </dependency>
             </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>1.6.6</version>
+                        <configuration>
+                            <name>LogiQuest</name>
+                            <appVersion>1.0.0</appVersion>
+                            <vendor>Lindenwood University Students</vendor>
+                            <destination>target/dist</destination>
+                            <module>team.logica_populi.dragonscore/team.logica_populi.dragonscore.Main</module>
+                            <runtimeImage>target/LogiQuest</runtimeImage>
+                            <winShortcut>true</winShortcut>
+                            <winPerUserInstall>true</winPerUserInstall>
+                            <icon>launcher.ico</icon>
+                            <winMenu>true</winMenu>
+                            <winMenuGroup>Logic</winMenuGroup>
+                            <javaOptions>
+                                <option>-Dfile.encoding=UTF-8</option>
+                                <option>--enable-native-access=javafx.graphics,javafx.web,javafx.fxml</option>
+                            </javaOptions>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>Mac</id>
@@ -116,17 +142,17 @@
                 <dependency>
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-controls</artifactId>
-                    <version>25-ea+8</version>
+                    <version>25-ea+14</version>
                 </dependency>
                 <dependency>
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-fxml</artifactId>
-                    <version>25-ea+8</version>
+                    <version>25-ea+14</version>
                 </dependency>
                 <dependency>
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-web</artifactId>
-                    <version>25-ea+8</version>
+                    <version>25-ea+14</version>
                 </dependency>
                 <dependency>
                     <groupId>org.controlsfx</groupId>
@@ -135,6 +161,29 @@
                     <version>11.1.2</version>
                 </dependency>
             </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>1.6.6</version>
+                        <configuration>
+                            <name>LogiQuest</name>
+                            <appVersion>1.0.0</appVersion>
+                            <vendor>Lindenwood University Students</vendor>
+                            <destination>target/dist</destination>
+                            <module>team.logica_populi.dragonscore/team.logica_populi.dragonscore.Main</module>
+                            <runtimeImage>target/LogiQuest</runtimeImage>
+                            <macSign>true</macSign>
+                            <icon>launcher.icns</icon>
+                            <javaOptions>
+                                <option>-Dfile.encoding=UTF-8</option>
+                                <option>--enable-native-access=javafx.graphics,javafx.web,javafx.fxml</option>
+                            </javaOptions>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>Linux</id>
@@ -147,17 +196,17 @@
                 <dependency>
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-controls</artifactId>
-                    <version>17.0.6</version>
+                    <version>24.0.1</version>
                 </dependency>
                 <dependency>
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-fxml</artifactId>
-                    <version>17.0.6</version>
+                    <version>24.0.1</version>
                 </dependency>
                 <dependency>
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-web</artifactId>
-                    <version>17.0.6</version>
+                    <version>24.0.1</version>
                 </dependency>
                 <dependency>
                     <groupId>org.controlsfx</groupId>
@@ -165,6 +214,32 @@
                     <version>11.1.2</version>
                 </dependency>
             </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>1.6.6</version>
+                        <configuration>
+                            <name>LogiQuest</name>
+                            <appVersion>1.0.0</appVersion>
+                            <vendor>Lindenwood University Students</vendor>
+                            <destination>target/dist</destination>
+                            <module>team.logica_populi.dragonscore/team.logica_populi.dragonscore.Main</module>
+                            <runtimeImage>target/LogiQuest</runtimeImage>
+                            <linuxShortcut>true</linuxShortcut>
+                            <linuxPackageName>logiquest</linuxPackageName>
+                            <linuxAppCategory>Utilities</linuxAppCategory>
+                            <linuxMenuGroup>Utilities</linuxMenuGroup>
+                            <icon>launcher.png</icon>
+                            <javaOptions>
+                                <option>-Dfile.encoding=UTF-8</option>
+                                <option>--enable-native-access=javafx.graphics,javafx.web,javafx.fxml</option>
+                            </javaOptions>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 
@@ -175,8 +250,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>23</source>
-                    <target>23</target>
+                    <source>24</source>
+                    <target>24</target>
+                    <release>24</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -197,6 +273,7 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <compress>0</compress>
                         </configuration>
                     </execution>
                 </executions>
@@ -224,32 +301,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.panteleyev</groupId>
-                <artifactId>jpackage-maven-plugin</artifactId>
-                <version>1.6.6</version>
-                <configuration>
-                    <name>LogiQuest</name>
-                    <appVersion>1.0.0</appVersion>
-                    <vendor>Lindenwood University Students</vendor>
-                    <destination>target/dist</destination>
-                    <module>team.logica_populi.dragonscore/team.logica_populi.dragonscore.Main</module>
-                    <runtimeImage>target/LogiQuest</runtimeImage>
-                    <linuxShortcut>true</linuxShortcut>
-                    <linuxPackageName>LogiQuest</linuxPackageName>
-                    <linuxAppCategory>Utilities</linuxAppCategory>
-                    <linuxMenuGroup>Utilities</linuxMenuGroup>
-                    <winShortcut>true</winShortcut>
-                    <winPerUserInstall>true</winPerUserInstall>
-                    <macSign>true</macSign>
-                    <icon>launcher.png</icon>
-                    <winMenu>true</winMenu>
-                    <winMenuGroup>Logic</winMenuGroup>
-                    <javaOptions>
-                        <option>-Dfile.encoding=UTF-8</option>
-                    </javaOptions>
-                </configuration>
             </plugin>
         </plugins>
     </build>
